[package]
name = "stream-body"
version = "0.1.1"
description = "An HttpBody implementation with efficient streaming support for the Rust HTTP library hyper"
homepage = "https://github.com/rousan/stream-body"
repository = "https://github.com/rousan/stream-body"
keywords = ["rust", "hyper", "asynchronous", "stream", "writer"]
categories = ["asynchronous"]
authors = ["Rousan Ali <rousanali786@gmail.com>"]
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
log = "0.4"
pin-project-lite = "0.1.4"
tokio = { version = "0.2", features = ["rt-core", "io-util"] }
async-pipe = "0.1"
http-body = "0.3"
bytes = "0.5"
http = "0.2"

[dev-dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
