[package]
name = "stream-body"
version = "0.1.1"
description = "An HttpBody implementation with efficient streaming support for the Rust HTTP library hyper"
homepage = "https://github.com/rousan/stream-body"
repository = "https://github.com/rousan/stream-body"
keywords = ["rust", "hyper", "asynchronous", "stream", "writer"]
categories = ["asynchronous"]
authors = ["Rousan Ali <rousanali786@gmail.com>"]
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
log = "0.4"
pin-project-lite = "0.1.4"
tokio = { version = "1", features = ["rt-multi-thread", "io-util"] }
async-pipe = { git = "https://github.com/harana-oss/async-pipe-rs" }
http-body = "0.4"
bytes = "1"
http = "0.2"

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
